# hibana

./: .travis.yml  Cargo.toml  LICENSE  OWNERS.json  README.md  Rocket.toml
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md  feature_request.md
src/: main.rs
src/cmd/: build.rs  mod.rs  new.rs  serve.rs
src/templates/: base.html  index.html  page.html
tests/: integration_test.rs
