[package]
name = "hibana"
version = "0.1.1"
authors = ["Kyushu Student Association"]
license = "MIT"
readme = "README.md"
description = "Static site generator"
repository = "https://github.com/student-kyushu/hibana"
keywords = ["static", "site", "generator", "blog"]
edition = "2018"

[dependencies]
clap = "2.32"
colored = "1.6"
failure = "0.1.3"
walkdir = "2"
pulldown-cmark = "0.2.0"
rocket = "0.4.0"
rocket_contrib = "0.4.0"
tera = "0.11.20"
serde = "1.0"
serde_derive = "1.0"
